--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,4 +1,18 @@
-/jist
-/memprof
-/tariavo
+/ChicagoFlowTest.xml
+/Flow
+/Makefile
+/SimpleDemo.xml
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
 /driver
+/jist
+/jist.properties
+/make.bat
+/memprof
+/off.properties
+/swans.properties
+/tariavo
