rtree, tocnije outline vozila (kao rectangle)

--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,19 +1,5 @@
-/ChicagoFlowTest.xml
-/Flow
-/Makefile
-/SimpleDemo.xml
-/StreetMobilityDemo.xml
-/build.xml
-/carsOutput.txt
-/debug-controller.properties
-/debug-rewrite.properties
-/debug.properties
-/driver
 /jist
-/jist.properties
-/make.bat
+/jsi
 /memprof
-/off.properties
-/swans.properties
 /tariavo
-/small-bug.jpg
+/driver
