--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,1 +1,16 @@
+/ChicagoFlowTest.xml
+/Flow
+/Makefile
+/SimpleDemo (BorisTLap's conflicted copy 2014-07-15).xml
+/SimpleDemo.xml
+/StreetMobilityDemo.txt
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
+/driver
 /jist
+/memprof
+/tariavo
