priprema za prezentaciju

--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,20 +1,3 @@
-/ChicagoFlowTest.xml
-/Flow
-/Makefile
-/SimpleDemo.xml
-/StreetMobilityDemo.txt
-/StreetMobilityDemo.xml
-/build.xml
-/carsOutput.txt
-/debug-controller.properties
-/debug-rewrite.properties
-/debug.properties
-/driver
-/jist
-/jist.properties
-/make.bat
-/memprof
-/off.properties
-/small-bug.jpg
-/swans.properties
-/tariavo
+/SimpleDemo1.xml
+/SimpleDemo2.xml
+/SimpleDemo3.xml
