--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,3 +1,17 @@
+/ChicagoFlowTest.xml
+/Flow
+/Makefile
+/SimpleDemo.xml
+/SimpleDemo1.xml
+/SimpleDemo2.xml
+/SimpleDemo3.xml
+/StreetMobilityDemo.txt
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
 /jist
-/driver
+/memprof
 /tariavo
+/driver
