fix check phy new instance

--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,3 +1,18 @@
+/StreetMobilityDemo.txt
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
+/driver
+/jist
+/jist.properties
+/make.bat
+/memprof
+/off.properties
+/small-bug.jpg
+/swans.properties
 /ChicagoFlowTest.xml
 /Flow
 /Makefile
@@ -5,13 +20,4 @@
 /SimpleDemo1.xml
 /SimpleDemo2.xml
 /SimpleDemo3.xml
-/StreetMobilityDemo.txt
-/StreetMobilityDemo.xml
-/build.xml
-/carsOutput.txt
-/debug-controller.properties
-/debug-rewrite.properties
-/jist
-/memprof
 /tariavo
-/driver
