spojio macinterface i vlcmacinterface

--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,4 +1,25 @@
-/jist
+/Makefile
+/SimpleDemo.xml
+/SimpleDemo1.xml
+/SimpleDemo2.xml
+/SimpleDemo3.xml
 /SimpleDemo4.xml
-/driver
 /SimpleDemo5.xml
+/StreetMobilityDemo.txt
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
+/driver
+/jist
+/jist.properties
+/make.bat
+/memprof
+/off.properties
+/small-bug.jpg
+/swans.properties
+/ChicagoFlowTest.xml
+/Flow
+/tariavo
