asymetry check type 1 completed

--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,1 +1,21 @@
+/ChicagoFlowTest.xml
+/Flow
+/Makefile
+/SimpleDemo.xml
+/SimpleDemo1.xml
+/SimpleDemo2.xml
+/SimpleDemo3.xml
+/SimpleDemo4.xml
+/SimpleDemo5.xml
+/StreetMobilityDemo.txt
+/StreetMobilityDemo.xml
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
+/driver
 /jist
+/memprof
+/tariavo
+/asym.vlcjob
