--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,3 +1,18 @@
+/asymMobile.vlcjob
+/build.xml
+/carsOutput.txt
+/debug-controller.properties
+/debug-rewrite.properties
+/debug.properties
+/di.vlcjob
+/driver
+/jist
+/jist.properties
+/make.bat
+/memprof
+/off.properties
+/small-bug.jpg
+/swans.properties
 /ChicagoFlowTest.xml
 /Flow
 /Makefile
@@ -12,11 +27,4 @@
 /asym.vlcjob
 /asym1.vlcjob
 /asym2.vlcjob
-/asymMobile.vlcjob
-/build.xml
-/carsOutput.txt
-/debug-controller.properties
-/jist
 /tariavo
-/memprof
-/driver
