--- a/r9adar2/swanspp/bin2/.gitignore
+++ b/r9adar2/swanspp/bin2/.gitignore
@@ -1,30 +1,5 @@
-/asymMobile.vlcjob
-/build.xml
-/carsOutput.txt
-/debug-controller.properties
-/debug-rewrite.properties
-/debug.properties
-/di.vlcjob
-/driver
 /jist
-/jist.properties
-/make.bat
 /memprof
-/off.properties
-/small-bug.jpg
-/swans.properties
-/ChicagoFlowTest.xml
-/Flow
-/Makefile
-/SimpleDemo.xml
-/SimpleDemo1.xml
-/SimpleDemo2.xml
-/SimpleDemo3.xml
-/SimpleDemo4.xml
-/SimpleDemo5.xml
-/StreetMobilityDemo.txt
-/StreetMobilityDemo.xml
-/asym.vlcjob
-/asym1.vlcjob
-/asym2.vlcjob
 /tariavo
+/driver
+/singleVehicleModel.vlcjob
